Metrics: split SERVER/QUEUE/DELAY/FORWARD and fix timing